--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,11 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/public"
-      }
+      "config": { "distDir": "dist/public" }
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/server/index.js" }
+    { "src": "/api/(.*)", "dest": "/server/index.js" },
+    { "src": "/(.*)", "dest": "/dist/public/$1" }
   ]
 }
