--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,12 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist/public" }
+      "src": "dist/public/index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/server/index.js" },
-    { "src": "/(.*)", "dest": "/dist/public/$1" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
